--- a/static/login.css
+++ b/static/login.css
@@ -76,13 +76,13 @@ body{
     color:white;
     border-radius:4px;
     border: #2ecc71 1px solid;
-    
     margin-top:20px;
     margin-bottom:20px;
     float:left;
     margin-left:16px;
     font-weight:800;
     font-size:0.8em;
+    -webkit-appearance: none;
   }
   
   .btn:hover {
@@ -98,12 +98,12 @@ body{
     color:white;
     border-radius:4px;
     border: #FFB30F 1px solid;
-    
     margin-top:20px;
     margin-bottom:20px;
     margin-left:10px;
     font-weight:800;
     font-size:0.8em;
+    -webkit-appearance: none;
   }
   
   .btn2:hover { 
