--- a/static/signup.css
+++ b/static/signup.css
@@ -104,6 +104,7 @@ body{
     margin-left:16px;
     font-weight:800;
     font-size:0.8em;
+    -webkit-appearance: none;
   }
   
   .btn:hover {
@@ -119,12 +120,12 @@ body{
     color:white;
     border-radius:4px;
     border: #F44708 1px solid;
-    
     margin-top:20px;
     margin-bottom:20px;
     margin-left:10px;
     font-weight:800;
     font-size:0.8em;
+    -webkit-appearance: none;
   }
   
   .btn2:hover { 
